syntax = "proto3";

package task;

option go_package = "github.com/Zipklas/task-tracker/pkg/protobuf/task;taskpb";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  rpc GetTask(GetTaskRequest) returns (Task);
  rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (Task);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string user_id = 3;
}

message CreateTaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string user_id = 4;
  int64 created_at = 5;
}

message ListTasksRequest {
  string user_id = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message GetTaskRequest {
  string id = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string user_id = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}
message GetAllTasksRequest {
  
}

message GetAllTasksResponse {
  repeated Task tasks = 1;
}